# SatHeuristic

./: .gitignore  Cargo.toml  tmp
data/datasets/j30.sm/: max.txt
data/parsed/: 0F  0Fj301_0  1F  1Fj301_0C  2F  2Fj301_0C  3F  3Fj301_0  4F  4Fj301_0  5F  5Fj301_0  6F  6Fj301_0  7F  7Fj301_0  8F  8Fj301_0  9F  9Fj301_0C
data/parsed/counterExample/: 0FcounterExample.wcnf  1FcounterExample.wcnf  2FcounterExample.wcnf  3FcounterExample.wcnf  4FcounterExample.wcnf  5FcounterExample.wcnf  6FcounterExample.wcnf  7FcounterExample.wcnf  8FcounterExample.wcnf  9FcounterExample.wcnf
data/parsed/j301_0/: 0Fj301_0.wcnf
data/test/: j301_0.sm  test_file
h_pumpkin/: Cargo.toml
h_pumpkin/src/encoders/: generalised_totaliser_encoder.rs
h_pumpkin/src/engine/: constraint_satisfaction_solver.rs
h_pumpkin/src/engine/sat/: propositional_variable_selector.rs
h_pumpkin/src/parsers/: dimacs.rs
modeling/: Cargo.toml
modeling/src/: main.rs  reader.rs  readerSM.rs  schedule.rs
pumpkin/: Cargo.toml
pumpkin/src/engine/sat/: propositional_variable_selector.rs
scripts/: batch_jobs.sh  filter.sh  jobs.sh
scripts/benchmark/: DelftBlueSetupGuide.md  runner.py
scripts/benchmark/framework/: environments.py
scripts/python_overview/: Untitled.ipynb
scripts/test_script/: Cargo.toml
scripts/test_script/src/: main.rs
shared/: Cargo.toml
shared/src/: floyd_warshall.rs  id_generator.rs  lib.rs  project.rs  readerSM.rs  sat_seg_var.rs  segment.rs
src/: floyd_warshall.rs  id_generator.rs  main.rs  project.rs  reader.rs  readerSM.rs  sat_seg_var.rs  segment.rs
(+8 files in other folders)
