[package]
name = "shared"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bumpalo = "3.12.2"
itertools = "0.10.5"
pyo3 = {version="0.18.3",features = ["auto-initialize"]}
rayon = "1.7.0"
indicatif = "0.17.5"
